--- a/src/styles/_realisations.scss
+++ b/src/styles/_realisations.scss
@@ -15,14 +15,15 @@
   }
 
   &__projectsContainer {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    max-height: 100%;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-content: center;
-    margin-bottom: 3em;
+    // display: flex;
+    // width: 100%;
+    // height: 100%;
+    // max-height: 100%;
+    max-width: 100%;
+    // flex-wrap: wrap;
+    // justify-content: space-around;
+    // align-content: center;
+    // margin-bottom: 3em;
   }
 
   &__projects {
@@ -87,29 +88,29 @@
     }
 
     &__projects {
-      width: 90vw;
-      height: 44vh;
-      box-shadow: 0 0 1em #cccccc;
-      margin-top: 2em;
-      object-fit: cover;
-      overflow: hidden;
-      position: relative;
-      margin-bottom: 4em;
+      width: 90%;
+      height: auto;
+      //   box-shadow: 0 0 1em #cccccc;
+      //   margin-top: 2em;
+      //   object-fit: cover;
+      //   overflow: hidden;
+      //   position: relative;
+      //   margin-bottom: 4em;
 
-      img {
-        height: 80%;
-      }
+      //   img {
+      //     height: 80%;
+      //   }
 
-      p {
-        color: white;
-        font-weight: initial;
-        left: 0;
-        top: 81%;
-        opacity: 1;
-        transform: translate(0);
-        text-align: center;
-        width: 100%;
-      }
+      //   p {
+      //     color: white;
+      //     font-weight: initial;
+      //     left: 0;
+      //     top: 81%;
+      //     opacity: 1;
+      //     transform: translate(0);
+      //     text-align: center;
+      //     width: 100%;
+      //   }
     }
   }
 }
