--- a/src/styles/_realisations.scss
+++ b/src/styles/_realisations.scss
@@ -87,30 +87,45 @@
       height: 100%;
     }
 
-    &__projects {
-      width: 90%;
-      height: auto;
-      //   box-shadow: 0 0 1em #cccccc;
-      //   margin-top: 2em;
-      //   object-fit: cover;
-      //   overflow: hidden;
-      //   position: relative;
-      //   margin-bottom: 4em;
-
-      //   img {
-      //     height: 80%;
-      //   }
-
-      //   p {
-      //     color: white;
-      //     font-weight: initial;
-      //     left: 0;
-      //     top: 81%;
-      //     opacity: 1;
-      //     transform: translate(0);
-      //     text-align: center;
-      //     width: 100%;
-      //   }
+    &__projectsContainer_description {
+      max-width: 85%;
+      margin-left: auto;
+      margin-right: auto;
+      margin-bottom: 1em;
     }
+
+    // &__projects {
+    //   width: 90%;
+    //   height: auto;
+    //   box-shadow: 0 0 1em #cccccc;
+    //   margin-top: 2em;
+    //   object-fit: cover;
+    //   overflow: hidden;
+    //   position: relative;
+    //   margin-bottom: 4em;
+
+    //   img {
+    //     height: 80%;
+    //   }
+
+    //   p {
+    //     color: white;
+    //     font-weight: initial;
+    //     left: 0;
+    //     top: 81%;
+    //     opacity: 1;
+    //     transform: translate(0);
+    //     text-align: center;
+    //     width: 100%;
+    //   }
+    // }
   }
+}
+.description_tech {
+  color: rgb(175, 172, 172);
+}
+
+.description_title {
+  color: $yellowMustard;
+  font-weight: bold;
 }
